--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,12 @@ dependencies {
 test {
     useTestNG()
 }
+task log(type: Test) {
+    useTestNG() {
+        suites "src/test/resources/card.xml"
+
+    }
+    if (project.hasProperty('browser')) {
+        systemProperty 'browser', "${browser}"
+    }
+}
