--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,26 @@ test {
 }
 task log(type: Test) {
     useTestNG() {
-        suites "src/test/resources/card.xml"
+        def groups = System.getProperty('groups')
+        if (groups != null) {
+            includeGroups groups
+        }
 
+        def suite = System.getProperty('suite', '')
+        if (suite.equals('card')) {
+            suites 'src/test/resources/card.xml'
+        } else if (suite.equals('smoke')) {
+            suites 'src/test/resources/smoke.xml'
+        } else {
+            suites 'src/test/resources/regress.xml'
+        }
     }
     if (project.hasProperty('browser')) {
         systemProperty 'browser', "${browser}"
+    }
+    task group(type: Test){
+        useTestNG {
+            suites 'src/test/resources/group.xml'
+        }
     }
 }
